--- a/views/subjectsubpage.hbs
+++ b/views/subjectsubpage.hbs
@@ -6,6 +6,7 @@
             <div class="bg-purple">
                 <h1>{{subject}}</h1>
             </div>
+            {{> uploader}}
         </div>
     </div>
 </div>
