--- a/views/partials/loadedfile.hbs
+++ b/views/partials/loadedfile.hbs
@@ -1,8 +1,8 @@
 <figure>
     <a class="text-decoration-none" href="{{location}}/{{filename}}">
-        <img class="loadedIMG" src="/img/extensions/{{extension originalname}}.png">
+        <img class="loadedIMG" src="/img/extensions/{{extension originalname}}.png" />
         <a class="text-decoration-none" href="/download/{{location}}/{{filename}}">
-            <img class="downloadImg" src="/img/download.png">
+            <img class="downloadImg" src="/img/download.png" />
         </a>
         <figcaption>{{originalname}}</figcaption>
     </a>
