--- a/public/style/style.css
+++ b/public/style/style.css
@@ -19,13 +19,13 @@ a {
   width: 24px;
 }
 
-.loadedIMG{
+.loadedIMG {
   height: 64px;
   width: 80px;
   padding: 0 8px;
 }
 
-figure{
+figure {
   position: relative;
   height: 80px;
   margin: 0 8px;
@@ -33,27 +33,27 @@ figure{
   cursor: pointer;
 }
 
-figcaption{
-  max-width:80px;
+figcaption {
+  max-width: 80px;
   height: 40px;
   text-align: center;
-  overflow:hidden;
+  overflow: hidden;
 }
 
-.downloadImg{
+.downloadImg {
   position: absolute;
-  top:-2px;
-  right:-4px;
+  top: -2px;
+  right: -6px;
   height: 20px;
   width: 20px;
 }
 
-.infoImg{
+.infoImg {
   position: relative;
   height: 256px;
 }
 
-.figureInfo{
+.figureInfo {
   border: 2px solid black;
   border-radius: 10px;
   padding-top: 15px;
@@ -62,14 +62,18 @@ figcaption{
   background-color: #0D69D2;
 }
 
-.figureinfo figcaption{
-  max-width:256px;
+.figureinfo figcaption {
+  max-width: 256px;
 }
 
-.downloadInfoImg{
+.downloadInfoImg {
   position: absolute;
   right: 6px;
   top: 12px;
   height: 40px;
   width: 40px;
+}
+
+.edit img {
+  height: 64px;
 }
